--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,11 @@ body {
   border-radius: 8px;
   border: 1px solid #6482AD;
 }
-.cards img {
+.cards .img {
   width: 100%;
   overflow: hidden;
   border-radius: 8px 8px 0 0;
+  background-color: gray;
 }
 
 @media screen and (max-width: 800px) {
